--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -80,8 +80,8 @@ Please refer to Section 4 of Software Requirements Specification found \href{htt
 
 \pagenumbering{arabic}
 
-This document is intended to provide a description of the specific validation and verification activites that will be completed throughout the development of the Orbit Watch System.
-The purpose of these activities is to ensure the system requirements agree with stakeholder needs, and to certify the implementation of the system satisifes the stakeholder requirements. This document will
+This document is intended to provide a description of the specific validation and verification activities that will be completed throughout the development of the Orbit Watch System.
+The purpose of these activities is to ensure the system requirements agree with stakeholder needs, and to certify the implementation of the system satisfies the stakeholder requirements. This document will
 start with a review of the system, a description of the testing plan, and a list of tests to be completed.
 
 
@@ -126,7 +126,7 @@ start with a review of the system, a description of the testing plan, and a list
 \begin{itemize}
     \item \textbf{Usability Testing}: This phase involves selecting a group of users, ideally from the target demographic (e.g., professionals in satellite imagery analysis or end-users in agriculture or rescue services). These users interact with the application's interface, performing tasks relevant to the platform's purpose, like labeling images or reviewing AI-generated annotations. They then provide feedback via a structured questionnaire focusing on usability aspects—such as ease of use, intuitiveness, and clarity. This feedback helps refine the user interface to ensure it meets user expectations and requirements.
 
-    \item \textbf{Demonstration Video}: The video will serve as an onboarding tool, guiding users on how to navigate and utilize the platform effectively. It will highlight key features, demonstrate a labeling task from start to finish, and showcase any unique functionalities, such as model-assisted annotations or accuracy checks. The video can be used in training materials or as a quick tutorial accessible directly from the platform to help new users become familiar with the tool's workflow.
+    \item \textbf{Demonstration Video}: The video will serve as an on-boarding tool, guiding users on how to navigate and utilize the platform effectively. It will highlight key features, demonstrate a labeling task from start to finish, and showcase any unique functionalities, such as model-assisted annotations or accuracy checks. The video can be used in training materials or as a quick tutorial accessible directly from the platform to help new users become familiar with the tool's workflow.
 
     \item \textbf{Formal Proof of Convergence for Labeled Images}: This proof aims to establish that labeled images converge toward a standard of accuracy and consistency. This involves statistical or mathematical validation showing that repeated labeling by different users (or with the assistance of AI) leads to a stable and reliable dataset over time. Proving convergence is crucial in ensuring that the labeling quality remains high, even as new users interact with the platform. This might include metrics such as inter-annotator agreement or AI confidence scores, contributing to the credibility and reliability of the labeled dataset.
 \end{itemize}
@@ -140,7 +140,7 @@ The following are BibTeX entries for our documents. Future references are also i
 \begin{itemize}
     \item \textbf{Problem Statement} (\cite{Problem_Statement}): Outlines the core challenges and objectives of the Orbit Watch project, providing context and motivation for development. It helps align our V\&V activities with the original goals and ensures that the software addresses the identified needs.
 
-    \item \textbf{Development Plan} (\cite{Development_Plan}): Details the project timeline, milestones, and resource allocation. It assists in scheduling V\&V activities appropriately within the development lifecycle, ensuring they are integrated at optimal points for maximum effectiveness.
+    \item \textbf{Development Plan} (\cite{Development_Plan}): Details the project timeline, milestones, and resource allocation. It assists in scheduling V\&V activities appropriately within the development life cycle, ensuring they are integrated at optimal points for maximum effectiveness.
     
     \item \textbf{Hazard Analysis} (\cite{Hazard_Analysis}): Identifies, analyzes and proposes mitigation strategies for potential hazards that could occur within the application. The document underscores the importance of proactive risk management in maintaining the platform's reliability, security, and user satisfaction.
 
@@ -220,11 +220,11 @@ The SRS will also be reviewed by our supervisor in a structured review meeting. 
 The following sections are informed by the constraints \& assumptions. Therefore, it is critical that the these are verified first.
 \begin{todolist}
 \item All constraints are correct and necessary
-\item All constraints are unambigious
+\item All constraints are unambiguous
 \item All constraints which should be present are present
 \item All constraints are verifiable
 \item All assumptions are correct and necessary
-\item All assumptions are unambigious
+\item All assumptions are unambiguous
 \item All assumptions which should be present are present
 \item All assumptions are verifiable
 \end{todolist}
@@ -234,13 +234,13 @@ The data model affects how the system will be decomposed in the future design. T
   \item Data model is correct
   \item Data model is complete
   \item Each element of data dictionary is correctly described. There are no extra or missing attributes.
-  \item Elements of data dictionary are unambigious
+  \item Elements of data dictionary are unambiguous
 \end{todolist}
 \textbf{Functional Requirements}\\
 This section describes the functionality of the system. This will be useful for understanding the context of the NFRs.
 \begin{todolist}
 \item All requirements are correct and necessary
-\item All requirements are unambigious
+\item All requirements are unambiguous
 \item All requirements which should be present are present
 \item All requirements are verifiable
 \item All requirements are feasible
@@ -250,7 +250,7 @@ This section describes the functionality of the system. This will be useful for 
 The NFRs have now been properly introduced by the other sections and should now be assessed.
 \begin{todolist}
   \item All requirements are correct and necessary
-  \item All requirements are unambigious
+  \item All requirements are unambiguous
   \item All requirements which should be present are present
   \item All requirements are verifiable
   \item All requirements are feasible
@@ -281,7 +281,7 @@ Each of the sections reviewed should also be monitored for the following criteri
 
 \subsection{Design Verification Plan}
 Upon completion of the System Design, the team will verify the design. This verification will involve reviews from the primary reviewers, in the same manner as described above.
-This again will provide fresh prospective on the design, and help identify any omitted or underexplained information. The verification will continue with a systematic review with The
+This again will provide fresh prospective on the design, and help identify any omitted or under-explained information. The verification will continue with a systematic review with The
 project supervisor using the following checklist:\\\\
 
 \textbf{Class Decomposition}\\
@@ -293,7 +293,7 @@ project supervisor using the following checklist:\\\\
   \item All class attributes are complete and necessary
   \item When appropriate, design patterns are used to improve design clarity
   \item Function permissions are appropriate for all classes
-  \item Classes cannot be simplified without degrading the understanability of the system
+  \item Classes cannot be simplified without degrading the understandability of the system
   \end{todolist}
   \textbf{General}\\
 \begin{todolist}
@@ -310,13 +310,13 @@ project supervisor using the following checklist:\\\\
 
 \subsection{Verification and Validation Plan Verification Plan}
 This document must be verified and validated, to ensure the validation and verification of other artifacts is correct. Like other documents, this will include review
-from our primary reviewers, as well as a review with the project supervisor. The review with the project supervisor will be guided by the folllowing checklist:\\
+from our primary reviewers, as well as a review with the project supervisor. The review with the project supervisor will be guided by the following checklist:\\
 
 \textbf{Testing Plan}\\
 \begin{todolist}
   \item Testing plan includes a checklist for each artifact
-  \item Checklist items are unambigious
-  \item Checklist contains all recessary items
+  \item Checklist items are unambiguous
+  \item Checklist contains all necessary items
   \item Checklist does not contain unnecessary items
   \item Plan includes review from multiple parties
   \item Plan includes method for collecting feedback on artifacts
@@ -327,7 +327,7 @@ from our primary reviewers, as well as a review with the project supervisor. The
   \item All functional requirements are covered by one or more tests\\
   \item All non-functional requirements are covered by one or more tests\\
   \item All `units' are sufficiently covered by one or more tests\\
-  \item Tests are unambigious
+  \item Tests are unambiguous
   \item Tests are verifiable
   \item Tests are repeatable
   \end{todolist}
@@ -341,9 +341,9 @@ from our primary reviewers, as well as a review with the project supervisor. The
 
 \subsection{Implementation Verification Plan}
 
-As part of the implementation verification plan, the team will conduct a series of static tests. One of which, will be a code walkthrough with members of the team.
+As part of the implementation verification plan, the team will conduct a series of static tests. One of which, will be a code walk through with members of the team.
 Before submitting Rev 0 and Rev 1, the members of the team will schedule time to walk through other members of the team through the code they have written. This will be 
-an opportunity for the team to look for code quality and adherence to standards, correctness, and alignment to the system design. During this walkthrough, we expect that 
+an opportunity for the team to look for code quality and adherence to standards, correctness, and alignment to the system design. During this walk through, we expect that 
 the lead developer of the code being displayed will explain the overall flow and control structures. In doing so, we expect they will find the errors in their own code.\\\\
 The team will also use a suite of tests, which is described in section 4.\\\\
 The team will used static analyzers to verify adherence to coding standards to perform type checking. Please refer to section 7.2.2 and 7.2.3 in the Development Plan found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{here}.
@@ -381,7 +381,7 @@ Please refer to section 7.2.2 and 7.2.3 in the Development Plan found \href{http
 \subsection{Software Validation Plan}
   As discussed in section 6.2 of the Problem Statement and Goals, found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/ProblemStatementAndGoals/ProblemStatement.pdf}{here}, 
   we will validate our software through user testing. More specifically, we will conduct testing of the user interface with peers, who will fill in a survey containing both qualitative and quantitative questions.
-  This survery will be used to track progress on the usability of the software by comparing results collecting during different iterations of the user interface. See the appendix for a sample of the user survey.
+  This survey will be used to track progress on the usability of the software by comparing results collecting during different iterations of the user interface. See the appendix for a sample of the user survey.
 
 % \wss{If there is any external data that can be used for validation, you should
 %   point to it here.  If there are no plans for validation, you should state that
@@ -823,7 +823,7 @@ Please refer to section 7.2.2 and 7.2.3 in the Development Plan found \href{http
         \item \textbf{Expected Result}:
         \begin{itemize}
             \item A new labeler account is created and securely stored.
-            \item Labeler is prompted to complete any additional onboarding steps.
+            \item Labeler is prompted to complete any additional on-boarding steps.
         \end{itemize}
     \end{itemize}
     \item \textbf{Test Case Derivation}:
@@ -1259,7 +1259,7 @@ Input/Condition: New users are prompted to complete at least one simulated label
 
 How test will be performed:
 \begin{enumerate}
-    \item Recruit a representative sample of new users and onboard them to the platform.
+    \item Recruit a representative sample of new users and on-board them to the platform.
     \item Instruct users to complete a simulated labeling task provided in the practice section.
     \item Track the completion rate of simulated tasks to determine if at least \hyperref[MIN_PRACTICE_TASK_COMPLETION]{MIN\_PRACTICE\_TASK\_COMPLETION}\% of users complete a practice task before accessing real data.
     \item After task completion, administer a satisfaction survey to users to gather feedback on their experience with the simulated tasks.
@@ -1517,7 +1517,7 @@ How test will be performed:
 \begin{enumerate}
     \item Use load testing tools (e.g., JMeter, Locust) to simulate different numbers of active labelers.
     \item For each load level, generate a set of service requests that need to be processed within the negotiated deadlines.
-    \item Monitor the percentage of service requests completed within the required timeframes.
+    \item Monitor the percentage of service requests completed within the required time frames.
     \item Identify the maximum number of labelers the system can support while maintaining at least \hyperref[MIN_REPORT_RETURN]{MIN\_REPORT\_RETURN}\% of requests meeting the deadlines.
 \end{enumerate}
 
@@ -1687,7 +1687,7 @@ How test will be performed:
     \item Prepare a large labeled dataset consisting of 10,000 images.
     \item Initiate the data transfer from the platform to the ML models using the established pipelines.
     \item Monitor the transfer process to measure the time taken to complete the transfer.
-    \item Verify that the data transfer completes within the specified timeframe.
+    \item Verify that the data transfer completes within the specified time frame.
     \item Execute batch processing of the large dataset through the pipelines and ensure no errors occur during the process.
     \item Repeat the transfer and processing under different load conditions to assess pipeline robustness.
 \end{enumerate}
@@ -2018,7 +2018,7 @@ Type: Manual, Dynamic
 					
 Initial State: Application is deployed with all help features. Tutorials and user documentation have been created.
 					
-Input/Condition: Users attempt to complete a basic labeling task using only the platform’s built-in help resources (help system, quick start guide, tutorials and contextual tooltips).
+Input/Condition: Users attempt to complete a basic labeling task using only the platform’s built-in help resources (help system, quick start guide, tutorials and contextual tool tips).
 					
 Output/Result: At least \hyperref[MIN_USER_HELP_SATISFACTION]{MIN\_USER\_HELP\_SATISFACTION}\% of users who used a help feature rated the feature as 4 or higher for helpfulness in the survey. With the assistance of the help tools, the user was able to perform the task within \hyperref[MAX_TASK_TIME]{MAX\_TASK\_TIME} minutes.
 					
